--- a/MuttCutts/Base.lproj/Main.storyboard
+++ b/MuttCutts/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,8 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kac-9b-TzR">
-                                <rect key="frame" x="81" y="100" width="219" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kac-9b-TzR">
+                                <rect key="frame" x="81" y="96" width="219" height="30"/>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -34,14 +35,20 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZK-u9-wyB">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZK-u9-wyB">
                                 <rect key="frame" x="20" y="145" width="24" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaz-14-fgb">
-                                <rect key="frame" x="81" y="145" width="219" height="30"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kDw-gL-rSQ">
+                                <rect key="frame" x="20" y="188" width="560" height="392"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaz-14-fgb">
+                                <rect key="frame" x="81" y="141" width="219" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="219" id="xPi-ee-Twb"/>
+                                </constraints>
                                 <connections>
                                     <segue destination="Tbh-Dc-Sgr" kind="popoverPresentation" identifier="toAddress" popoverAnchorView="eaz-14-fgb" id="XjV-9b-3Du">
                                         <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
@@ -50,6 +57,20 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="81" id="2QZ-yn-4ax"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kDw-gL-rSQ" secondAttribute="bottom" constant="20" id="AIf-hO-SrJ"/>
+                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="C59-mO-XCs"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="width" secondItem="Kac-9b-TzR" secondAttribute="width" id="Cv0-eC-ajd"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="cZK-u9-wyB" secondAttribute="top" id="MTn-MX-Uuz"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="cZK-u9-wyB" secondAttribute="trailing" constant="37" id="Q4I-zN-HHB"/>
+                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="f05-Pv-5IF"/>
+                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="top" secondItem="eaz-14-fgb" secondAttribute="bottom" constant="13" id="hds-4h-9Q6"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="Kac-9b-TzR" secondAttribute="bottom" constant="15" id="hrq-tV-wcz"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="Kac-9b-TzR" secondAttribute="leading" id="iBf-NQ-5VK"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="145" id="jby-Fd-mPI"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="trailing" secondItem="Kac-9b-TzR" secondAttribute="trailing" id="yjF-b0-rXI"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="2in-5w-rYU"/>
                     <connections>
