--- a/MuttCutts/Base.lproj/Main.storyboard
+++ b/MuttCutts/Base.lproj/Main.storyboard
@@ -75,6 +75,7 @@
                     <navigationItem key="navigationItem" id="2in-5w-rYU"/>
                     <connections>
                         <outlet property="fromAddressButton" destination="Kac-9b-TzR" id="wUy-jk-usf"/>
+                        <outlet property="mapView" destination="kDw-gL-rSQ" id="ZXz-rB-GAw"/>
                         <outlet property="toAddressButton" destination="eaz-14-fgb" id="epA-8j-oq3"/>
                     </connections>
                 </viewController>
