--- a/MuttCutts/Base.lproj/Main.storyboard
+++ b/MuttCutts/Base.lproj/Main.storyboard
@@ -18,8 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kac-9b-TzR">
-                                <rect key="frame" x="81" y="96" width="219" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kac-9b-TzR">
+                                <rect key="frame" x="81" y="83" width="219" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="219" id="V2B-dW-Qe9"/>
+                                </constraints>
                                 <state key="normal">
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -29,48 +32,64 @@
                                     </segue>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="From:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qg5-q3-s1x">
-                                <rect key="frame" x="20" y="100" width="44" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZK-u9-wyB">
-                                <rect key="frame" x="20" y="145" width="24" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kDw-gL-rSQ">
-                                <rect key="frame" x="20" y="188" width="560" height="392"/>
-                            </mapView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaz-14-fgb">
-                                <rect key="frame" x="81" y="141" width="219" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="219" id="xPi-ee-Twb"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaz-14-fgb">
+                                <rect key="frame" x="81" y="117" width="219" height="30"/>
                                 <connections>
                                     <segue destination="Tbh-Dc-Sgr" kind="popoverPresentation" identifier="toAddress" popoverAnchorView="eaz-14-fgb" id="XjV-9b-3Du">
                                         <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                     </segue>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="From:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qg5-q3-s1x">
+                                <rect key="frame" x="20" y="87" width="44" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cZK-u9-wyB">
+                                <rect key="frame" x="20" y="121" width="24" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kDw-gL-rSQ">
+                                <rect key="frame" x="20" y="179" width="560" height="401"/>
+                            </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pjh-Hh-8d8">
+                                <rect key="frame" x="22" y="150" width="558" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="SIG-ba-cB8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="81" id="2QZ-yn-4ax"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kDw-gL-rSQ" secondAttribute="bottom" constant="20" id="AIf-hO-SrJ"/>
-                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="C59-mO-XCs"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="width" secondItem="Kac-9b-TzR" secondAttribute="width" id="Cv0-eC-ajd"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="cZK-u9-wyB" secondAttribute="top" id="MTn-MX-Uuz"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="cZK-u9-wyB" secondAttribute="trailing" constant="37" id="Q4I-zN-HHB"/>
-                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="f05-Pv-5IF"/>
+                            <constraint firstItem="Pjh-Hh-8d8" firstAttribute="top" secondItem="cZK-u9-wyB" secondAttribute="bottom" constant="8" symbolic="YES" id="2oJ-gE-cJc"/>
+                            <constraint firstItem="cZK-u9-wyB" firstAttribute="centerY" secondItem="eaz-14-fgb" secondAttribute="centerY" id="7b5-NH-qd6"/>
+                            <constraint firstItem="Pjh-Hh-8d8" firstAttribute="trailing" secondItem="kDw-gL-rSQ" secondAttribute="trailing" id="AMX-Qg-0Mt"/>
+                            <constraint firstItem="Kac-9b-TzR" firstAttribute="leading" secondItem="eaz-14-fgb" secondAttribute="leading" id="HPL-b9-R8s"/>
+                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="Kac-9b-TzR" secondAttribute="bottom" constant="4" id="I2l-HI-mSS"/>
+                            <constraint firstItem="Kac-9b-TzR" firstAttribute="trailing" secondItem="eaz-14-fgb" secondAttribute="trailing" id="O8Q-g0-FMS"/>
+                            <constraint firstItem="qg5-q3-s1x" firstAttribute="leading" secondItem="cZK-u9-wyB" secondAttribute="leading" id="SFL-wt-2nD"/>
+                            <constraint firstItem="qg5-q3-s1x" firstAttribute="centerY" secondItem="Kac-9b-TzR" secondAttribute="centerY" id="TIO-Iw-TWj"/>
+                            <constraint firstItem="Kac-9b-TzR" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="19" id="ZiT-hb-Ybi"/>
+                            <constraint firstItem="Kac-9b-TzR" firstAttribute="leading" secondItem="qg5-q3-s1x" secondAttribute="trailing" constant="17" id="adg-Ov-o6d"/>
+                            <constraint firstItem="kDw-gL-rSQ" firstAttribute="top" secondItem="Pjh-Hh-8d8" secondAttribute="bottom" constant="8" symbolic="YES" id="d2Y-us-rlx"/>
+                            <constraint firstItem="qg5-q3-s1x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ddq-QB-mTb"/>
+                            <constraint firstItem="Pjh-Hh-8d8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="dgN-Q9-ets"/>
+                            <constraint firstItem="Pjh-Hh-8d8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="2" id="eG9-0F-ldQ"/>
                             <constraint firstItem="kDw-gL-rSQ" firstAttribute="top" secondItem="eaz-14-fgb" secondAttribute="bottom" constant="13" id="hds-4h-9Q6"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="Kac-9b-TzR" secondAttribute="bottom" constant="15" id="hrq-tV-wcz"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="leading" secondItem="Kac-9b-TzR" secondAttribute="leading" id="iBf-NQ-5VK"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="145" id="jby-Fd-mPI"/>
-                            <constraint firstItem="eaz-14-fgb" firstAttribute="trailing" secondItem="Kac-9b-TzR" secondAttribute="trailing" id="yjF-b0-rXI"/>
+                            <constraint firstAttribute="bottom" secondItem="kDw-gL-rSQ" secondAttribute="bottom" constant="20" symbolic="YES" id="rhe-SR-Awi"/>
+                            <constraint firstItem="cZK-u9-wyB" firstAttribute="leading" secondItem="kDw-gL-rSQ" secondAttribute="leading" id="zhI-Rg-4K2"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="hds-4h-9Q6"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="2in-5w-rYU"/>
                     <connections>
